--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.15.0"
   }
 }
